--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ __pycache__/
 nfl-venv/
 assets/nfl-big-data-bowl-2025/
 assets/game-play/game_2022110606/play_1531
+assets/nflverse/pbp_2022.csv
+assets/defense-data/
+assets/offense-data/
